Removal of unnecessary coloring code to make LaTeX files more readable

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -57,7 +57,7 @@
 \end{justify}
 
 \begin{justify}
-    Bash Utils est divisé en deux parties : la librairie, et les modules, expliqués plus en détails dans le fichier \textbf{\color{lime}modules/Fonctionnement.pdf\color{white}}.
+    Bash Utils est divisé en deux parties : la librairie, et les modules, expliqués plus en détails dans le fichier \textbf{\color{lime}modules/Fonctionnement.pdf}.
 \end{justify}
 
 \begin{justify}
@@ -78,7 +78,7 @@
     Pour utiliser cette librairie, il vous suffira de sourcer un seul fichier :
 
     \begin{itemize}
-        \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh\color{white}}\color{white}
+        \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh}\color{white}
     \end{itemize}
 \end{justify}
 
@@ -107,7 +107,7 @@
 \subsubsection{bin}\color{white}
 
 \begin{justify}
-    Ce lien symbolique pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin\color{white}}.
+    Ce lien symbolique pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin}.
 \end{justify}
 
 \begin{justify}
