--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -60,36 +60,36 @@
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Checkings.lib}\\[1\baselineskip]
 
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main\color{white}}\\[1\baselineskip]
-
-
-% -----------------------
-
-\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Nom du fichier :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
-
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Status.conf\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Colors.conf}\\[1\baselineskip]
 
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Text.conf\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Status.conf}\\[1\baselineskip]
 
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
+
+
+% -----------------------
+
+\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
+
+\textbf{Nom du fichier : \color{lime}Text.conf}\\[1\baselineskip]
+
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
 
 
 % -----------------------
@@ -99,13 +99,13 @@
 \color{blue}
 \subsubsection{Fonctions externes appelées}\color{white}
 
-\textbf{Fonction :} \textbf{\color{mauve}IsChar\color{white}}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}IsChar}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :} Cette fonction verifie que la valeur enregistrée dans une variable soit un simple caractère alphanumérique.
 \end{justify}
 
-\textbf{Fichier de définition :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Checkings.lib}\\[1\baselineskip]
 
 
 % -----------------------
@@ -115,39 +115,39 @@
 \color{blue}
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
 
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}\\[1\baselineskip]
+\textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_COLOR...}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.
 \end{justify}
 
-\textbf{Fichier de définition :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Colors.conf}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO\color{white}}\\[1\baselineskip]
+\textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :} Cette variable globale sert à mettre le script dans un état dit ``stable'', vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies, dans le cas où un rappel de la même fonction dans l'état précédent peut causer ceci.
 \end{justify}
 
-\textbf{Fichier de définition :} \textbf{\color{lime}Status.conf\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Status.conf}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}}\\[1\baselineskip]
+\textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :} Cette variable globale enregistre le caractère par défaut à afficher sur chaque colonne d'une ligne d'un header.
 \end{justify}
 
-\textbf{Fichier de définition :} \textbf{\color{lime}Text.conf\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Text.conf}\\[1\baselineskip]
 
 
 % -----------------------
@@ -167,7 +167,7 @@
 \color{blue}
 \subsubsection{DrawLine}\color{white}
 
-\textbf{Fonction : \color{mauve}DrawLine\color{white}}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}DrawLine}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :}\\
@@ -177,33 +177,33 @@
 \textbf{Paramètres :}\\[1\baselineskip]
 \begin{tabular}{|l|l|}
 \hline
-\textbf{\color{orange}p\_lineColor\color{white}} & Ce paramètre attend un code couleur * \\
+\textbf{\color{orange}p\_lineColor} & Ce paramètre attend un code couleur * \\
 \hline
-\textbf{\color{orange}p\_lineChar\color{white}} & Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne \\
+\textbf{\color{orange}p\_lineChar} & Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne \\
 \hline
 \end{tabular}
 
 
 \begin{justify}
-    * Chaque code couleur est défini dans le fichier \textbf{\color{lime}Colors.conf\color{white}}.
+    * Chaque code couleur est défini dans le fichier \textbf{\color{lime}Colors.conf}.
 \end{justify}
 
 \begin{justify}
     \textbf{Fonctionnement :}\\
-    La fonction \textbf{\color{mauve}DrawLine\color{white}} vérifie d'abord que la valeur du second paramètre \textbf{\color{orange}\$p\_lineChar\color{white}} soit bien un simple caractère (alphabétique ou numérique) via la fonction \textbf{\color{mauve}IsChar\color{white}}, définie dans le fichier \textbf{\color{lime}Checkings.lib\color{white}}. Si ce n'est pas le cas, ce paramètre est redéfini, et seul le premier caractère de la chaîne est récupéré pour l'affichage de la ligne.
+    La fonction \textbf{\color{mauve}DrawLine} vérifie d'abord que la valeur du second paramètre \textbf{\color{orange}\$p\_lineChar} soit bien un simple caractère (alphabétique ou numérique) via la fonction \textbf{\color{mauve}IsChar}, définie dans le fichier \textbf{\color{lime}Checkings.lib}. Si ce n'est pas le cas, ce paramètre est redéfini, et seul le premier caractère de la chaîne est récupéré pour l'affichage de la ligne.
 \end{justify}
 
 \begin{justify}
-    Cette fonction vérifie ensuite qu'une valeur soit passée en premier argument (paramètre \textbf{\color{orange}p\_lineColor\color{white}}). Si c'est le cas, la commande \textbf{\color{gray}echo\color{white}} est appelée avec ses options \textbf{\color{gray}-ne\color{white}} pour encoder la couleur de la ligne de caractère à dessiner.
+    Cette fonction vérifie ensuite qu'une valeur soit passée en premier argument (paramètre \textbf{\color{orange}p\_lineColor}). Si c'est le cas, la commande \textbf{\color{gray}echo} est appelée avec ses options \textbf{\color{gray}-ne} pour encoder la couleur de la ligne de caractère à dessiner.
 \end{justify}
 
 \begin{justify}
-    Une fois ceci fait, une boucle \textbf{for} est exécutée. Pour un nombre \textbf{i} allant de 1 au nombre de colonnes présentes dans la fenêtre du terminal obtenu grâce à la commande \textbf{\color{gray}eval echo\color{white}}, on affiche \textbf{i} fois, sans retour à la ligne, le caractère passé en deuxième argument (\textbf{\color{orange}\$p\_lineChar\color{white}}) dans le fichier de
-configurations \textbf{\color{lime}Text.conf\color{white}}.
+    Une fois ceci fait, une boucle \textbf{for} est exécutée. Pour un nombre \textbf{i} allant de 1 au nombre de colonnes présentes dans la fenêtre du terminal obtenu grâce à la commande \textbf{\color{gray}eval echo}, on affiche \textbf{i} fois, sans retour à la ligne, le caractère passé en deuxième argument (\textbf{\color{orange}\$p\_lineChar}) dans le fichier de
+configurations \textbf{\color{lime}Text.conf}.
 \end{justify}
 
 \begin{justify}
-    Enfin, une fois la boucle exécutée, la fonction ré-encode la couleur d'affichage selon la couleur par défaut du terminal, si le paramètre \textbf{\color{orange}\$p\_lineColor\color{white}} contient une valeur.
+    Enfin, une fois la boucle exécutée, la fonction ré-encode la couleur d'affichage selon la couleur par défaut du terminal, si le paramètre \textbf{\color{orange}\$p\_lineColor} contient une valeur.
 \end{justify}
 
 \begin{justify}
@@ -219,7 +219,7 @@ configurations \textbf{\color{lime}Text.conf\color{white}}.
 \color{blue}
 \subsubsection{HeaderBase}\color{white}
 
-\textbf{Fonction : \color{mauve}HeaderBase\color{white}}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}HeaderBase}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :}\\
@@ -229,19 +229,19 @@ configurations \textbf{\color{lime}Text.conf\color{white}}.
 \textbf{Paramètres :}\\[1\baselineskip]
 \begin{tabular}{|l|l|}
 \hline 
-\textbf{\color{orange}p\_lineColor\color{white}} & Ce paramètre attend un code couleur \\ 
+\textbf{\color{orange}p\_lineColor} & Ce paramètre attend un code couleur \\ 
 \hline 
-\textbf{\color{orange}p\_lineChar\color{white}} & Ce paramètre attend un seul caractère \\ 
+\textbf{\color{orange}p\_lineChar} & Ce paramètre attend un seul caractère \\ 
 \hline 
-\textbf{\color{orange}p\_stringColor\color{white}} & Ce paramètre attend un code couleur \\ 
+\textbf{\color{orange}p\_stringColor} & Ce paramètre attend un code couleur \\ 
 \hline 
-\textbf{\color{orange}p\_stringTxt\color{white}} & Ce paramètre attend une chaîne de caractères\\ 
+\textbf{\color{orange}p\_stringTxt} & Ce paramètre attend une chaîne de caractères\\ 
 \hline 
 \end{tabular}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Fonctionnement :}\\
-    Tout d'abord, la fonction \textbf{\color{mauve}HeaderBase\color{white}} vérifie l'état de la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO\color{white}}, puis en adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction \textbf{\color{mauve}DrawLine\color{white}} en y passant en arguments ses deux premiers paramètres.
+    Tout d'abord, la fonction \textbf{\color{mauve}HeaderBase} vérifie l'état de la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO}, puis en adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction \textbf{\color{mauve}DrawLine} en y passant en arguments ses deux premiers paramètres.
 \end{justify}
 
 \begin{justify}
@@ -249,11 +249,11 @@ configurations \textbf{\color{lime}Text.conf\color{white}}.
 \end{justify}
 
 \begin{justify}
-    La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \textbf{\color{lime}Colors.conf\color{white}} et \textbf{\color{lime}Text.conf\color{white}}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.
+    La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \textbf{\color{lime}Colors.conf} et \textbf{\color{lime}Text.conf}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.
 \end{justify}
 
 \begin{justify}
-    Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections suivantes : \textbf{\color{green}Headers unicolores\color{white}} et \textbf{\color{green}Headers multicolores\color{white}}.
+    Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections suivantes : \textbf{\color{green}Headers unicolores} et \textbf{\color{green}Headers multicolores}.
 \end{justify}
 
 \textbf{Utilisation :}\linebreak
@@ -270,17 +270,17 @@ configurations \textbf{\color{lime}Text.conf\color{white}}.
 
 \begin{justify}
     \textbf{Description :}
-    Chacune de ces fonctions appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant ses trois premiers arguments prédéfinis.
+    Chacune de ces fonctions appelle la fonction \textbf{\color{mauve}HeaderBase}, en lui passant ses trois premiers arguments prédéfinis.
 \end{justify}
 
 \begin{justify}
     \textbf{Paramètre :}\\
-    \textbf{\color{orange}\$1\color{white}} --> Ce paramètre attend la chaîne de caractère à afficher.
+    \textbf{\color{orange}\$1} --> Ce paramètre attend la chaîne de caractère à afficher.
 \end{justify}
 
 \begin{justify}
     \textbf{Fonctionnement :}\\
-    Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant en premier et troisième arguments un même code couleur \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}, un caractère défini par la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}} en deuxième argument, puis la chaîne de caractères à afficher en quatrième argument (seul paramètre que prennent ces fonctions).
+    Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{mauve}HeaderBase}, en lui passant en premier et troisième arguments un même code couleur \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...}, un caractère défini par la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE} en deuxième argument, puis la chaîne de caractères à afficher en quatrième argument (seul paramètre que prennent ces fonctions).
 \end{justify}
 
 \begin{justify}
@@ -345,7 +345,7 @@ configurations \textbf{\color{lime}Text.conf\color{white}}.
 \end{justify}
 
 \begin{justify}
-    Il faudra donc se contenter d'appeler la fonction \textbf{\color{mauve}HeaderBase\color{white}}, suivie de ses 4 arguments, dont chaque valeur sera différente des autres.
+    Il faudra donc se contenter d'appeler la fonction \textbf{\color{mauve}HeaderBase}, suivie de ses 4 arguments, dont chaque valeur sera différente des autres.
 \end{justify}
 
 \end{document}
