--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -64,32 +64,35 @@
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Checkings.lib}\\[1\baselineskip]
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Colors.conf}\\[1\baselineskip]
+
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Status.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Status.conf}\\[1\baselineskip]
+
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Nom du fichier :} \textbf{\color{lime}Text.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}Text.conf}\\[1\baselineskip]
+
+\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
 
 
 % -----------------------
@@ -98,11 +101,12 @@
 
 \color{blue}
 \subsubsection{Fonctions externes appelées}\color{white}
-\textbf{Fonction :} \textbf{\color{mauve}DrawLine\color{white}}\\[1\baselineskip]
+
+\textbf{Fonction : \color{mauve}DrawLine}\\[1\baselineskip]
 
 \textbf{Description :} .\\[1\baselineskip]
 
-\textbf{Fichier de définition :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Checkings.lib}\\[1\baselineskip]
 
 
 % -----------------------
@@ -111,40 +115,41 @@
 
 \color{blue}
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}\\[1\baselineskip]
+
+\textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_COLOR...}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.
 \end{justify}
 
-\textbf{Fichier de définition :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Colors.conf}\\[1\baselineskip]
 
 
 % -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_PROJECT\_LOG\_FILE\_PATH\color{white}}\\[1\baselineskip]
+\textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_PROJECT\_LOG\_FILE\_PATH}\\[1\baselineskip]
 
 \begin{justify}
-    \textbf{Description :} Cette variable enregistre le chemin du fichier de logs créé par le script d'initialisation si la valeur de la variable de statut associée est définie à \textbf{\color{gray}true\color{white}}.
+    \textbf{Description :} Cette variable enregistre le chemin du fichier de logs créé par le script d'initialisation si la valeur de la variable de statut associée est définie à \textbf{\color{gray}true}.
 \end{justify}
 
-\textbf{Fichier de définition :} \\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Project.conf} \\[1\baselineskip]
 
 
 % -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}}\\[1\baselineskip]
+\textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE}\\[1\baselineskip]
 
 \textbf{Description :}
 \begin{justify}
-    Cette variable .
+    Cette variable contient le caractère à afficher en tant que ligne de header.
 \end{justify}
 
-\textbf{Fichier de définition :} \\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}Text.conf}\\[1\baselineskip]
 
 
 % -----------------------
