Removal of unnecessary coloring code to make LaTeX files more readable

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -78,7 +78,7 @@
     Pour utiliser cette librairie, il vous suffira de sourcer un seul fichier :
 
     \begin{itemize}
-        \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh}\color{white}
+        \item \textbf{\color{orange}\$HOME\color{lime}/.Bash-utils-init.sh}
     \end{itemize}
 \end{justify}
 
@@ -155,9 +155,9 @@
     Il contient les sous-dossiers suivants :
 
     \begin{itemize}
-        \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.\\
+        \item \textbf{\color{lime}functions\color{white} :} Ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.\\
 
-        \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
+        \item \textbf{\color{lime}lang\color{white} :} Ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
     \end{itemize}
 \end{justify}
 
@@ -165,7 +165,7 @@
 \textbf{Description des sous-dossiers du dossier \textbf{functions}} :
 
 \setcounter{secnumdepth}{4}
-\paragraph{functions}\mbox{}\\
+\paragraph{functions}\mbox{}
 
 \begin{justify}
     Les sous-dossiers du dossier \textbf{functions} sont liés à un module et contiennent les fichiers source de chaque module.
@@ -178,7 +178,7 @@
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
-\paragraph{lang}\mbox{}\\\mbox{}\\
+\paragraph{lang}\mbox{}\\\mbox{}
 
 \textbf{Rappel :} fonctionnalité future, certaines idées peuvent encore changer.
 
@@ -189,7 +189,7 @@
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
-\paragraph{variables}\mbox{}\\\mbox{}\\
+\paragraph{variables}\mbox{}
 
 \begin{justify}
     Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \textbf{\color{lime}colors.var} sont des variables définissant le code de la couleur d'un texte à afficher.
