Added the ''win'' shortcut in the French Introduction.tex file

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -107,7 +107,7 @@
 \subsubsection{bin}\color{white}
 
 \begin{justify}
-    Ce lien symbolique pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin}.
+    Ce lien symbolique (systèmes UNIX seulement) pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin}.
 \end{justify}
 
 \begin{justify}
@@ -227,6 +227,18 @@
 
 \begin{justify}
     Ce dossier, absent lors du téléchargement de la librairie, est créé par le fichier d'initialisation du module \textbf{main}, et sert à enregistrer les fichiers temporaires générés par un projet, tels que des fichiers de logs, de traduction, etc...
+\end{justify}
+
+
+% -----------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{win}\color{white}
+
+\begin{justify}
+    À l'instar du symlink (lien symbolique) \textbf{\color{blue}bin}, ce raccourci Windows (pour les utilisateurs de Windows Subsystem for Linux, sachant que les symlinks UNIX ne sont pas nativement reconnus par l'explorateur de fichier de Windows) pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin}.
 \end{justify}
 
 
