--- a/docs/fr/modules/main/functions/Errors.tex
+++ b/docs/fr/modules/main/functions/Errors.tex
@@ -42,53 +42,76 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\baselineskip]
+
+\begin{justify}
+    Ce fichier source inclut des fonctions servant à la gestion d'erreurs.
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Définitions des éléments mentionnés}\color{white}
 
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
-\textbf{Nom du fichier :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\color{white}*}\\[1\baselineskip]
 
-\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH/lib/functions/main\color{white}} dans la sous-sous-catégorie\linebreak \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
+\textbf{Nom du fichier : \color{lime}}\\[1\baselineskip]
+
+\textbf{Dossier parent : \color{lime}}\\[1\baselineskip]
+
+\begin{justify}
+    \textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH/lib/functions/main} dans la sous-sous-catégorie\linebreak \textbf{\color{blue}Variables}.
+\end{justify}
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 
 \color{blue}
 \subsubsection{Fonctions}\color{white}
-\textbf{Fonction :} \textbf{\color{mauve}\color{white}}\\[1\baselineskip]
 
-\textbf{Fichier de définition :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}}\\[1\baselineskip]
+
+\textbf{Fichier de définition :} \textbf{\color{lime}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
-\textbf{Variable :} \textbf{\color{orange}\color{white}}\\[1\baselineskip]
+
+\textbf{Variable : \color{orange}}\\[1\baselineskip]
 
 \textbf{Description :} .\\[1\baselineskip]
 
-\textbf{Fichier de définition :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}}\\[1\baselineskip]
 
 
-
+% -----------------------
 
 \par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]
 
-\textbf{Variable :} \textbf{\color{orange}\color{white}}\\[1\baselineskip]
+\textbf{Variable : \color{orange}}\\[1\baselineskip]
 
 \textbf{Description :} .\\[1\baselineskip]
 
-\textbf{Fichier de définition :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
+\textbf{Fichier de définition : \color{lime}}\\[1\baselineskip]
 
 
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
