--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -14,11 +14,10 @@
 \fontfamily{}
 
 \pagecolor{black}
-\title{\color{red}Fonctions du fichier de librairie \color{lime}Headers.lib\color{white}}
+\title{\color{red}Fonctions du fichier de librairie \color{lime}Headers.lib}\color{white}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
-\justifying
 
 \pdfinfo{
   /Title    (Fonctions du fichier de librairie Headers.lib)
@@ -256,7 +255,10 @@ configurations \textbf{\color{lime}Text.conf}.
     Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections suivantes : \textbf{\color{green}Headers unicolores} et \textbf{\color{green}Headers multicolores}.
 \end{justify}
 
-\textbf{Utilisation :}\linebreak
+\begin{justify}
+    \textbf{Utilisation :}\\
+    Appelez cette fonction pour marquer une séparation entre plusieurs étapes de votre script, tout en affichant un header dont vous pouvez personnaliser l'affichage des couleurs.
+\end{justify}
 
 
 % -----------------------
@@ -284,8 +286,8 @@ configurations \textbf{\color{lime}Text.conf}.
 \end{justify}
 
 \begin{justify}
-    \textbf{Utilisation :}
-    Appelez une de ces fonctions pour afficher un header unicolore sans avoir à passer ses trois premiers arguments.
+    \textbf{Utilisation :}\\
+    Appelez une de ces fonctions pour marquer une séparation entre plusieurs étapes de votre script, tout en affichant un header unicolore sans avoir à passer ses trois premiers arguments.
 \end{justify}
 
 
