--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -271,7 +271,7 @@
 	Puis dans la sous-catégorie suivante :
 	
 	\begin{itemize}
-    	\item \textbf{DISPLAYING A COLORED MESSAGE WITH A PAUSE TIME DEPENDING ON THE\\ "\$\_\_BU\_MAIN\_STAT\_TIME\_TXT" status variable}
+    	\item \textbf{DISPLAYING A COLORED MESSAGE WITH A PAUSE TIME DEPENDING ON THE\\ "\$\_\_BU\_MAIN\_STAT\_TIME\_TXT" STATUS VARIABLE}
 	\end{itemize}
 \end{justify}
 
